<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_profile_settings"
        android:layout="@layout/preference_category">
        <EditTextPreference 
            android:key="fullName"
           	android:singleLine="true"
           	android:title="@string/preference_full_name" 
           	android:layout="@layout/preference_list"/>    
        <ListPreference
            android:key="gender"
            android:defaultValue="Male"
            android:entries="@array/genderValues"
            android:entryValues="@array/genderValues"
            android:title="@string/preference_gender"
            android:dialogTitle="@string/preference_select_gender"
            android:layout="@layout/preference_list"
        />
        <EditTextPreference
            android:key="weight"
            android:defaultValue="60.00"
           	android:singleLine="true"
           	android:title="@string/preference_weight" 
           	android:dialogTitle="@string/preference_weight"
           	android:inputType="numberDecimal"
           	android:layout="@layout/preference_list"
           	/> 
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/preference_gps_listener"
        android:layout="@layout/preference_category">
        <ListPreference
            android:defaultValue="2000"
            android:entries="@array/gpsMinTimeValues"
            android:entryValues="@array/gpsMinTimeValues"
            android:key="gpsMinTime"
            android:summary="@string/preference_gps_time_summary"
            android:title="@string/preference_gps_time_title" 
            android:layout="@layout/preference_list" />
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/gpsMinDistanceValues"
            android:entryValues="@array/gpsMinDistanceValues"
            android:key="gpsMinDistance"
            android:summary="@string/preference_gps_distance_summary"
            android:title="@string/preference_gps_distance_title"
            android:layout="@layout/preference_list" />
    </PreferenceCategory>

</PreferenceScreen>