<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/menu_records"
              android:title="@string/menu_records"
              android:icon="@drawable/ic_menu_recent_history"
            />

        <item android:id="@+id/menu_feedback"
              android:title="@string/menu_feedback"
              android:icon="@drawable/ic_menu_start_conversation"
            />

        <item android:id="@+id/menu_about"
              android:title="@string/menu_about"
              android:icon="@drawable/ic_menu_info_details"
            />
        
        
        <item android:id="@+id/menu_exit"
              android:title="@string/menu_exit"
              android:icon="@drawable/ic_exit"
            />
    </group>
</menu>
