<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_weight="1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal" >

        <TextView
            style="@style/Item.Title"
            android:text="@string/item_average_speed" />

        <TextView
            style="@style/Item.TitleSecond"
            android:layout_marginLeft="2dp"
            android:text="@string/minkm" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_avg_speed"
        style="@style/Item.Content"
        android:text="@string/no_records" />

</LinearLayout>