<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_weight="1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_title_speed"
        style="@style/Item.Title"
        android:text="@string/item_max_speed" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/item_max_speed"
            style="@style/Item.Content"
            android:text="@string/no_records" />

        <TextView
            style="@style/Item.TitleSecond"
            android:text="@string/minkm" />
    </LinearLayout>

</LinearLayout>